fix: refactor service registration to centralize gradle infrastructure w (#42)